--- a/project.css
+++ b/project.css
@@ -12,11 +12,16 @@ a{
 img{
     max-width: 100%;
 }
+:root{
+    --primary-color:#26335D;
+    --secondar-color:#fff;
+    --tertiary-color:#1BA0AB;
+}
 .cmn_class{
     padding: 0px 25px;
 }
 .blue_bg{
-    background-color:#26335D;
+    background-color:var(--primary-color);
 }
 .special_container{
     margin: auto;
@@ -36,7 +41,7 @@ img{
     display: none;
 }
 .hamburger i{
-    color:#fff;
+    color:var(--secondar-color);
 }
 .nav_elements{
     display: flex;
@@ -52,7 +57,7 @@ img{
     display: none;
 }
 .navbar h3{
-    color: #fff;
+    color: var(--secondar-color);
     font-size: 32px;
     letter-spacing: 0.1px;
 }
@@ -64,7 +69,7 @@ img{
     display: none;
 }
 .link_item li a{
-    color: #fff;
+    color: var(--secondar-color);
     font-size: 14px;
     letter-spacing: 0.2px;
 }
@@ -74,7 +79,7 @@ img{
 .dropdown{
     position: absolute;
     padding: 5px 0px 5px 10px;
-    background-color:#1BA0AB;
+    background-color:var(--tertiary-color);
     border-radius: 5px;
     visibility: hidden;
 }
@@ -95,7 +100,7 @@ img{
     position: absolute;
     left: 82px;
     top: 2px;
-    background-color: #fff;
+    background-color:var(--secondar-color);
     padding: 5px;
     border-radius: 5px;
     visibility: hidden;
@@ -109,7 +114,7 @@ img{
     justify-content: center;
 }
 .mini_drop li a{
-    color:#1BA0AB;
+    color:var(--tertiary-color);
 }
 li{
     list-style: none;
@@ -124,11 +129,11 @@ li{
 .transparent_btn{
     border: none;
     background-color: transparent;
-    color: #fff;
+    color: var(--secondar-color);
 }
 .filled_btn{
-    background-color:#1BA0AB;
-    color: #fff;
+    background-color:var(--tertiary-color);
+    color: var(--secondar-color);
     border: none;
 
 }
@@ -147,18 +152,18 @@ li{
     max-width: 514px;
 }
 .head_text h5{
-    color: #1BA0AB;
+    color: var(--tertiary-color);
     font-size: 16px;
     letter-spacing: 0.1px;
 
 }
 .head_text h1{
-    color: #fff;
+    color: var(--secondar-color);
     font-size: 58px;
     letter-spacing: 0.2px;
 }
 .head_text h4{
-    color: #fff;
+    color: var(--secondar-color);
     font-size: 20px;
     letter-spacing: 0.2px;
     font-weight: 400;
@@ -166,11 +171,11 @@ li{
 }
 .border_btn{
     background-color: transparent;
-    color: #1BA0AB;
+    color: var(--tertiary-color);
     border: solid 1px;
 }
 .white_bg{
-    background-color: #fff;
+    background-color: var(--secondar-color);
 }
 .container{
     margin: auto;
@@ -203,7 +208,7 @@ li{
 .solution_text a{
     font-size: 14px;
     letter-spacing: 0.2px;
-    color: #1BA0AB;
+    color: var(--tertiary-color);
     display: flex;
     align-items: center;
 }
@@ -226,7 +231,7 @@ li{
 .purchase_text h6{
     font-size: 14px;
     letter-spacing: 0.2px;
-    color: #1BA0AB;
+    color:#252B42;
 
 }
 .purchase_text h2{
@@ -264,13 +269,13 @@ li{
     align-items: center;
 }
 .product_link a{
-    color: #1BA0AB;
+    color: var(--tertiary-color);
     font-size: 14px;
     letter-spacing: 0.2px;
 
 }
 .product_tag{
-    background-color: #26335D;
+    background-color: var(--primary-color);
     border-radius: 20px;
     height: fit-content;
 }
@@ -283,7 +288,7 @@ li{
 .product_tag span{
     font-size: 12px;
     letter-spacing: 0.2px;
-    color: #fff;
+    color: var(--secondar-color);
 }
 .product_tag i{
     height: 16px;
@@ -324,7 +329,7 @@ li{
     color: #2DC071;
 }
 .round_btn{
-    color: #1BA0AB;
+    color: var(--tertiary-color);
     border: solid 1px;
     border-radius: 37px;
     background-color: transparent;
@@ -333,7 +338,7 @@ li{
     justify-content: center;
 }
 .super_icon{
-    background-color: #fff;
+    background-color: var(--secondar-color);
     border-radius: 54px;
     width: 40px;
     height: 40px;
@@ -352,7 +357,7 @@ li{
 .main_label span{
     font-size: 14px;
     letter-spacing: 0.2px;
-    color: #fff;
+    color: var(--secondar-color);
     display: inline-block;
 }
 .hero_tag{
@@ -390,7 +395,7 @@ li{
     position: absolute;
     top: -40px;
     right: -15px;
-    color: #fff;
+    color: var(--secondar-color);
 }
 .cost_block{
     display: grid;
@@ -423,13 +428,13 @@ li{
     position: relative;
 }
 .cost_pieces:hover{
-    background-color: #26335D;
+    background-color: var(--primary-color);
 }
 .cost_pieces:hover .cost_rate h6{
     color: #8EC2F2;
 }
 .cost_pieces:hover h3, .cost_pieces:hover h6, .cost_pieces:hover p{
-    color: #fff;
+    color: var(--secondar-color);
 
 }
 .top_text{
@@ -459,7 +464,7 @@ li{
 .cost_rate h2{
     margin: 0;
     text-align: center;
-    color: #1BA0AB;
+    color: var(--tertiary-color);
 
 }
 .cost_rate h6{
@@ -499,10 +504,10 @@ li{
     max-width: 726px;
 }
 .blue_text h2{
-    color: #fff;
+    color: var(--secondar-color);
 }
 .blue_text p{
-    color: #fff;
+    color: var(--secondar-color);
 }
 .client_container{
     padding: 50px 0px;
@@ -519,7 +524,7 @@ li{
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-color: #fff;
+    background-color: var(--secondar-color);
     padding: 25px;
     padding-top: 50px;
 }
@@ -550,7 +555,7 @@ li{
     text-align: left;
 }
 .client_start{
-    color: #1BA0AB;
+    color: var(--tertiary-color);
     font-size: 14px;
     letter-spacing: 0.2;
 }
@@ -677,6 +682,6 @@ li{
     display: none;
 }
 #hamburger{
-    color: #fff;
+    color: var(--secondar-color);
 }
 
