--- a/project.css
+++ b/project.css
@@ -231,7 +231,7 @@ li{
 .purchase_text h6{
     font-size: 14px;
     letter-spacing: 0.2px;
-    color:#252B42;
+    color:var(--tertiary-color);
 
 }
 .purchase_text h2{
